# raguard

./: .gitignore  README.md  pyproject.toml
raguard/: __init__.py  models.py  verifier.py
raguard/rules/: dates.py  entities.py  vague.py
tests/: test_verifier.py
