[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raguard"
version = "0.1.0"
description = "Runtime hallucination detection middleware for RAG applications"
requires-python = ">=3.9"
dependencies = [
    "spacy>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["raguard*"]
